--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="./pages/main.jsx"></script>
+		<script type="module" src="../pages/main.jsx"></script>
 	</body>
 </html>
