--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta
 			property="og:description"
 			content="Selamat datang di halaman resmi kelas XII IPA 2 MAN Bontang! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XII IPA 2, yang tertarik pada Teknik Komputer dan Jaringan." />
-		<meta property="og:image" content="https://xitkj3.vercel.app/Welcome.png" />
+		<meta property="og:image" content="https://xitkj3.vercel.app/welcomexiipa2.jpeg" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
@@ -29,7 +29,7 @@
 		<meta
 			property="twitter:description"
 			content="Selamat datang di halaman resmi kelas XII IPA 2 MAN Bontang! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XII IPA 2, yang tertarik pada Teknik Komputer dan Jaringan." />
-		<meta property="twitter:image" content="https://xitkj3.vercel.app/Welcome.png" />
+		<meta property="twitter:image" content="https://xitkj3.vercel.app/welcomexiipa2.jpeg" />
 	</head>
 	<body>
 		<div id="root"></div>
