--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://xitkj3.vercel.app/" />
+		<meta property="og:url" content="https://xii-ipa-2.vercel.app/" />
 		<meta property="og:title" content="XII IPA 2" />
 		<meta
 			property="og:description"
 			content="Selamat datang di halaman resmi kelas XII IPA 2 MAN Bontang! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XII IPA 2, yang tertarik pada Teknik Komputer dan Jaringan." />
-		<meta property="og:image" content="https://xitkj3.vercel.app/welcomexiipa2.jpeg" />
+		<meta property="og:image" content="https://xii-ipa-2.vercel.app/welcomexiipa2.jpeg" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://xitkj3.vercel.app/" />
+		<meta property="twitter:url" content="https://xii-ipa-2.vercel.app/" />
 		<meta property="twitter:title" content="XII IPA 2" />
 		<meta
 			property="twitter:description"
 			content="Selamat datang di halaman resmi kelas XII IPA 2 MAN Bontang! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas XII IPA 2, yang tertarik pada Teknik Komputer dan Jaringan." />
-		<meta property="twitter:image" content="https://xitkj3.vercel.app/welcomexiipa2.jpeg" />
+		<meta property="twitter:image" content="https://xii-ipa-2.vercel.app/welcomexiipa2.jpeg" />
 	</head>
 	<body>
 		<div id="root"></div>
